src/nimviz/cgraph.nim


var agMemDisc* {.importc: "AgMemDisc", header: "graphviz/cgraph.h".}: AgMemDiscT
var agIdDisc* {.importc: "AgIdDisc", header: "graphviz/cgraph.h".}: AgIdDiscT
var agIoDisc* {.importc: "AgIoDisc", header: "graphviz/cgraph.h".}: AgIoDiscT
var agDefaultDisc* {.importc: "AgDefaultDisc", header: "graphviz/cgraph.h".}: AgDiscT

# {.push dynlib: cgraphDll.}

proc agPushDisc*(g: ptr AGraphT; disc: ptr AgCbDiscT; state: pointer) {.
    importc: "agpushdisc", dynlib: cgraphDll.}
proc agPopDisc*(g: ptr AGraphT; disc: ptr AgCbDiscT): cint {.importc: "agpopdisc",
    dynlib: cgraphDll.}
proc agCallBacks*(g: ptr AGraphT; flag: cint): cint {.importc: "agcallbacks",
    dynlib: cgraphDll.}
##  return prev value
##  graphs

proc agOpen*(name: cstring; desc: AgDescT; disc: ptr AgDiscT): ptr AGraphT {.
    importc: "agopen", dynlib: cgraphDll.}
proc agClose*(g: ptr AGraphT): cint {.importc: "agclose", dynlib: cgraphDll.}
proc agRead*(chan: pointer; disc: ptr AgDiscT = nil): ptr AGraphT {.importc: "agread",
    dynlib: cgraphDll.}
proc agMemRead*(cp: cstring): ptr AGraphT {.importc: "agmemread", dynlib: cgraphDll.}
proc agReadLine*(a1: cint) {.importc: "agreadline", dynlib: cgraphDll.}
proc agSetFile*(a1: cstring) {.importc: "agsetfile", dynlib: cgraphDll.}
proc agConcat*(g: ptr AGraphT; chan: pointer; disc: ptr AgDiscT): ptr AGraphT {.
    importc: "agconcat", dynlib: cgraphDll.}
proc agWrite*(g: ptr AGraphT; chan: pointer): cint {.importc: "agwrite",
    dynlib: cgraphDll.}
proc agIsDirected*(g: ptr AGraphT): cint {.importc: "agisdirected", dynlib: cgraphDll.}
proc agIsUndirected*(g: ptr AGraphT): cint {.importc: "agisundirected",
    dynlib: cgraphDll.}
proc agIsStrict*(g: ptr AGraphT): cint {.importc: "agisstrict", dynlib: cgraphDll.}
proc agIsSimple*(g: ptr AGraphT): cint {.importc: "agissimple", dynlib: cgraphDll.}
##  nodes

proc agNode*(g: ptr AGraphT; name: cstring; createflag = true): ptr AgNodeT {.
    importc: "agnode", dynlib: cgraphDll.}
proc agIdNode*(g: ptr AGraphT; id: IdType; createflag = true): ptr AgNodeT {.
    importc: "agidnode", dynlib: cgraphDll.}
proc agSubNode*(g: ptr AGraphT; n: ptr AgNodeT; createflag = true): ptr AgNodeT {.
    importc: "agsubnode", dynlib: cgraphDll.}
proc agFstNode*(g: ptr AGraphT): ptr AgNodeT {.importc: "agfstnode",
    dynlib: cgraphDll.}
proc agNxtNode*(g: ptr AGraphT; n: ptr AgNodeT): ptr AgNodeT {.importc: "agnxtnode",
    dynlib: cgraphDll.}
proc agLstNode*(g: ptr AGraphT): ptr AgNodeT {.importc: "aglstnode",
    dynlib: cgraphDll.}
proc agPvNode*(g: ptr AGraphT; n: ptr AgNodeT): ptr AgNodeT {.importc: "agprvnode",
    dynlib: cgraphDll.}
proc agSubRep*(g: ptr AGraphT; n: ptr AgNodeT): ptr AgSubNodeT {.importc: "agsubrep",
    dynlib: cgraphDll.}
proc agNodeBefore*(u: ptr AgNodeT; v: ptr AgNodeT): cint {.importc: "agnodebefore",
    dynlib: cgraphDll.}
##  we have no shame
##  and neither do we
##  edges

proc agEdge*(g: ptr AGraphT; t: ptr AgNodeT; h: ptr AgNodeT; name: cstring;
            createflag = true): ptr AgEdgeT {.importc: "agedge", dynlib: cgraphDll.}
proc agIdEdge*(g: ptr AGraphT; t: ptr AgNodeT; h: ptr AgNodeT; id: IdType;
              createflag = true): ptr AgEdgeT {.importc: "agidedge",
    dynlib: cgraphDll.}
proc agSubEdge*(g: ptr AGraphT; e: ptr AgEdgeT; createflag = true): ptr AgEdgeT {.
    importc: "agsubedge", dynlib: cgraphDll.}
proc agFstIn*(g: ptr AGraphT; n: ptr AgNodeT): ptr AgEdgeT {.importc: "agfstin",
    dynlib: cgraphDll.}
proc agNxtIn*(g: ptr AGraphT; e: ptr AgEdgeT): ptr AgEdgeT {.importc: "agnxtin",
    dynlib: cgraphDll.}
proc agFstOut*(g: ptr AGraphT; n: ptr AgNodeT): ptr AgEdgeT {.importc: "agfstout",
    dynlib: cgraphDll.}
proc agNxtOut*(g: ptr AGraphT; e: ptr AgEdgeT): ptr AgEdgeT {.importc: "agnxtout",
    dynlib: cgraphDll.}
proc agFstEdge*(g: ptr AGraphT; n: ptr AgNodeT): ptr AgEdgeT {.importc: "agfstedge",
    dynlib: cgraphDll.}
proc agNxtEdge*(g: ptr AGraphT; e: ptr AgEdgeT; n: ptr AgNodeT): ptr AgEdgeT {.
    importc: "agnxtedge", dynlib: cgraphDll.}
##  generic

proc aGraphOf*(obj: pointer): ptr AGraphT {.importc: "agraphof", dynlib: cgraphDll.}
proc agRoot*(obj: pointer): ptr AGraphT {.importc: "agroot", dynlib: cgraphDll.}
proc agContains*(a1: ptr AGraphT; a2: pointer): cint {.importc: "agcontains",
    dynlib: cgraphDll.}
proc agNameOf*(a1: pointer): cstring {.importc: "agnameof", dynlib: cgraphDll.}
proc agRelabel*(obj: pointer; name: cstring): cint {.importc: "agrelabel",
    dynlib: cgraphDll.}
##  scary

proc agRelabelNode*(n: ptr AgNodeT; newname: cstring): cint {.
    importc: "agrelabel_node", dynlib: cgraphDll.}
proc agDelete*(g: ptr AGraphT; obj: pointer): cint {.importc: "agdelete",
    dynlib: cgraphDll.}
proc agDelSubG*(g: ptr AGraphT; sub: ptr AGraphT): clong {.importc: "agdelsubg",
    dynlib: cgraphDll.}
##  could be agclose

proc agDelNode*(g: ptr AGraphT; arg_n: ptr AgNodeT): cint {.importc: "agdelnode",
    dynlib: cgraphDll.}
proc agDelEdge*(g: ptr AGraphT; arg_e: ptr AgEdgeT): cint {.importc: "agdeledge",
    dynlib: cgraphDll.}
proc agObjKind*(a1: pointer): cint {.importc: "agobjkind", dynlib: cgraphDll.}
##  strings

proc agStrDup*(a1: ptr AGraphT; a2: cstring): cstring {.importc: "agstrdup",
    dynlib: cgraphDll.}
proc agStrDupHtml*(a1: ptr AGraphT; a2: cstring): cstring {.importc: "agstrdup_html",
    dynlib: cgraphDll.}
proc agHtmlStr*(a1: cstring): cint {.importc: "aghtmlstr", dynlib: cgraphDll.}
proc agStrBind*(g: ptr AGraphT; a2: cstring): cstring {.importc: "agstrbind",
    dynlib: cgraphDll.}
proc agStrFree*(a1: ptr AGraphT; a2: cstring): cint {.importc: "agstrfree",
    dynlib: cgraphDll.}
proc agCanon*(a1: cstring; a2: cint): cstring {.importc: "agcanon", dynlib: cgraphDll.}
proc agStrCanon*(a1: cstring; a2: cstring): cstring {.importc: "agstrcanon",
    dynlib: cgraphDll.}
proc agCanonStr*(str: cstring): cstring {.importc: "agcanonStr", dynlib: cgraphDll.}
##  manages its own buf
##  definitions for dynamic string attributes


proc agAttr*(g: ptr AGraphT; kind: cint; name: cstring; value: cstring): ptr AgSymT {.
    importc: "agattr", dynlib: cgraphDll.}
proc agAttrSym*(obj: pointer; name: cstring): ptr AgSymT {.importc: "agattrsym",
    dynlib: cgraphDll.}
proc agNxtAttr*(g: ptr AGraphT; kind: cint; attr: ptr AgSymT): ptr AgSymT {.
    importc: "agnxtattr", dynlib: cgraphDll.}
proc agCopyAttr*(oldobj: pointer; newobj: pointer): cint {.importc: "agcopyattr",
    dynlib: cgraphDll.}
proc agBindRec*(obj: pointer; name: cstring; size: cuint; moveTo_front: cint): pointer {.
    importc: "agbindrec", dynlib: cgraphDll.}
proc agGetRec*(obj: pointer; name: cstring; moveTo_front: cint): ptr AgrecT {.
    importc: "aggetrec", dynlib: cgraphDll.}
proc agDelRec*(obj: pointer; name: cstring): cint {.importc: "agdelrec",
    dynlib: cgraphDll.}
proc agInit*(g: ptr AGraphT; kind: cint; rec_name: cstring; recTize: cint;
            moveTo_front: cint) {.importc: "aginit", dynlib: cgraphDll.}
proc agClean*(g: ptr AGraphT; kind: cint; rec_name: cstring) {.importc: "agclean",
    dynlib: cgraphDll.}
proc agGet*(obj: pointer; name: cstring): cstring {.importc: "agget", dynlib: cgraphDll.}
proc agXGet*(obj: pointer; sym: ptr AgSymT): cstring {.importc: "agxget",
    dynlib: cgraphDll.}
proc agSet*(obj: pointer; name: cstring; value: cstring): cint {.importc: "agset",
    dynlib: cgraphDll.}
proc agXSet*(obj: pointer; sym: ptr AgSymT; value: cstring): cint {.importc: "agxset",
    dynlib: cgraphDll.}
proc agSafeSet*(obj: pointer; name: cstring; value: cstring; def: cstring = ""): cint {.
    importc: "agsafeset", dynlib: cgraphDll.}
##  defintions for subgraphs

proc agSubG*(g: ptr AGraphT; name: cstring; cflag = true): ptr AGraphT {.
    importc: "agsubg", dynlib: cgraphDll.}
##  constructor

proc agIdSubG*(g: ptr AGraphT; id: IdType; cflag = true): ptr AGraphT {.
    importc: "agidsubg", dynlib: cgraphDll.}
##  constructor

proc agFstSubG*(g: ptr AGraphT): ptr AGraphT {.importc: "agfstsubg",
    dynlib: cgraphDll.}
proc agNxtSubG*(subg: ptr AGraphT): ptr AGraphT {.importc: "agnxtsubg",
    dynlib: cgraphDll.}
proc agParent*(g: ptr AGraphT): ptr AGraphT {.importc: "agparent", dynlib: cgraphDll.}
##  set cardinality

proc agNNodes*(g: ptr AGraphT): cint {.importc: "agnnodes", dynlib: cgraphDll.}
proc agNEdges*(g: ptr AGraphT): cint {.importc: "agnedges", dynlib: cgraphDll.}
proc agNSubG*(g: ptr AGraphT): cint {.importc: "agnsubg", dynlib: cgraphDll.}
proc agDegree*(g: ptr AGraphT; n: ptr AgNodeT; `in`: cint; `out`: cint): cint {.
    importc: "agdegree", dynlib: cgraphDll.}
proc agCountUniqEdges*(g: ptr AGraphT; n: ptr AgNodeT; `in`: cint; `out`: cint): cint {.
    importc: "agcountuniqedges", dynlib: cgraphDll.}
##  memory

proc agAlloc*(g: ptr AGraphT; size: csize_t): pointer {.importc: "agalloc",
    dynlib: cgraphDll.}
proc agRealloc*(g: ptr AGraphT; `ptr`: pointer; oldsize: csize_t; size: csize_t): pointer {.
    importc: "agrealloc", dynlib: cgraphDll.}
proc agFree*(g: ptr AGraphT; `ptr`: pointer) {.importc: "agfree", dynlib: cgraphDll.}

# {.pop.}

type VmMallocT* = object
# extern struct _vmalloc_s *agHeap(AGraphT * g);
##  an engineering compromise is a joy forever
proc agHeap*(g: ptr AGraphT): ptr VmMallocT {.importc: "agheap", dynlib: cgraphDll.}


proc agInternalmapclearlocalnames*(g: ptr AGraphT) {.
    importc: "aginternalmapclearlocalnames", dynlib: cgraphDll.}
template agNew*(g, t: untyped): untyped =
  (cast[ptr t](agAlloc(g, sizeof((t)))))

template agNnew*(g, n, t: untyped): untyped =
  (cast[ptr t](agAlloc(g, (n) * sizeof((t)))))

##  error handling

type
  AgErrLevelT* {.size: sizeof(cint).} = enum
    AGWARN, AGERR, AGMAX, AGPREV
  AgUserErrF* = proc (a1: cstring): cint


proc agSetErr*(a1: AgErrLevelT): AgErrLevelT {.importc: "agseterr",
    dynlib: cgraphDll.}
proc agLastErr*(): cstring {.importc: "aglasterr", dynlib: cgraphDll.}
proc agErr*(level: AgErrLevelT; fmt: cstring): cint {.varargs, importc: "agerr",
    dynlib: cgraphDll.}
proc agErrorF*(fmt: cstring) {.varargs, importc: "agerrorf", dynlib: cgraphDll.}
proc agWarningF*(fmt: cstring) {.varargs, importc: "agwarningf", dynlib: cgraphDll.}
proc agErrors*(): cint {.importc: "agerrors", dynlib: cgraphDll.}
proc agResetErrors*(): cint {.importc: "agreseterrors", dynlib: cgraphDll.}
proc agSetErrF*(a1: AgUserErrF): AgUserErrF {.importc: "agseterrf", dynlib: cgraphDll.}
##  data access macros
##  this assumes that e[0] is out and e[1] is inedge, see edgepair in edge.c

template AGIN2OUT*(e: untyped): untyped =
  ((e) - 1)

template AGOUT2IN*(e: untyped): untyped =
  ((e) + 1)

template AGOPP*(e: untyped): untyped =
  (if (AGTYPE(e) == AGINEDGE): AGIN2OUT(e) else: AGOUT2IN(e))

template AGMKOUT*(e: untyped): untyped =
  (if AGTYPE(e) == AGOUTEDGE: (e) else: AGIN2OUT(e))

template AGMKIN*(e: untyped): untyped =
  (if AGTYPE(e) == AGINEDGE: (e) else: AGOUT2IN(e))

template AGTAIL*(e: untyped): untyped =
  (AGMKIN(e).node)

template AGHEAD*(e: untyped): untyped =
  (AGMKOUT(e).node)

template agTail*(e: untyped): untyped =
  AGTAIL(e)

template agHead*(e: untyped): untyped =
  AGHEAD(e)

template agOpp*(e: untyped): untyped =
  AGOPP(e)

template agEqedge*(e, f: untyped): untyped =
  (AGMKOUT(e) == AGMKOUT(f))

const
  TAILPORT_ID* = "tailport"
  HEADPORT_ID* = "headport"

# when defined(_MSC_VER) and not defined(CGRAPH_EXPORTS):
 # const
 #   extern* = __declspec(dllimport)

var
  agDirected* {.importc: "Agdirected", dynlib: cgraphDll.}: AgDescT
  agStrictDirected* {.importc: "Agstrictdirected", dynlib: cgraphDll.}: AgDescT
  agUndirected* {.importc: "Agundirected", dynlib: cgraphDll.}: AgDescT
  agStrictUndirected* {.importc: "Agstrictundirected", dynlib: cgraphDll.}: AgDescT

##  fast graphs

proc agFlatten*(g: ptr AGraphT; flag: cint) {.importc: "agflatten", dynlib: cgraphDll.}
type
  AgNodeRefT* = AgSubNodeT
  AgedgerefT* = DtLinkT

template AGHEADPOINTER*(g: untyped): untyped =
  cast[ptr AgNodeRefT]((g.n_seq.data.hh.head))
